--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    android:gravity="center"
+    android:background="#F8F8F8">
 
     <EditText
         android:id="@+id/editTextEmail"
@@ -10,7 +11,10 @@
         android:layout_height="wrap_content"
         android:hint="Email"
         android:inputType="textEmailAddress"
-        android:layout_marginBottom="16dp"/>
+        android:layout_margin="16dp"
+        android:background="#FFFFFF"
+        android:padding="12dp"
+        android:textColorHint="#999999"/>
 
     <EditText
         android:id="@+id/editTextPassword"
@@ -19,30 +23,35 @@
         android:hint="Password"
         android:inputType="textPassword"
         android:layout_below="@id/editTextEmail"
-        android:layout_marginBottom="16dp"/>
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:background="#FFFFFF"
+        android:padding="12dp"
+        android:textColorHint="#999999"/>
 
     <Button
         android:id="@+id/buttonLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Login"
         android:layout_below="@id/editTextPassword"
-        android:layout_marginTop="16dp"/>
-
-    <TextView
-        android:id="@+id/textViewForgotPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Forgot Password?"
-        android:layout_below="@id/buttonLogin"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:text="Login"
+        android:textColor="#FFFFFF"
+        android:background="#FF5722"
+        android:padding="16dp"
+        android:textSize="16sp"/>
 
     <TextView
         android:id="@+id/textViewRegister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Don't have an account? Register here."
-        android:layout_below="@id/textViewForgotPassword"
-        android:layout_marginTop="16dp"/>
+        android:text="Register"
+        android:layout_below="@id/buttonLogin"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:textColor="#FF5722"
+        android:textSize="16sp"/>
 
 </RelativeLayout>
