--- a/app/src/main/res/layout/activity_city.xml
+++ b/app/src/main/res/layout/activity_city.xml
@@ -4,16 +4,35 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!-- Votre contenu principal ici -->
+    <!-- Titre de la page -->
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="CITY"
         android:textSize="30sp"
-        android:textStyle="bold">
-
+        android:textStyle="bold"
+        android:layout_margin="16dp">
     </TextView>
+
+    <!-- Bouton pour créer une ville -->
+    <Button
+        android:id="@+id/buttonCreateCity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Créer une ville"
+        android:layout_below="@id/textView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"/>
+
+    <!-- RecyclerView pour afficher les villes -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewCity"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/buttonCreateCity"
+        android:layout_marginTop="16dp"
+        android:padding="8dp"/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
@@ -24,3 +43,5 @@
     </com.google.android.material.bottomnavigation.BottomNavigationView>
 
 </RelativeLayout>
+
+
