--- a/app/src/main/res/layout/activity_create_city.xml
+++ b/app/src/main/res/layout/activity_create_city.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <Button
-        android:id="@+id/buttonBackToTop"
+        android:id="@+id/buttonRetourCity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Retour en haut"
@@ -22,7 +22,7 @@
         android:inputType="text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonBackToTop"
+        app:layout_constraintTop_toBottomOf="@+id/buttonRetourCity"
         android:layout_margin="16dp"/>
 
     <EditText
